@@ -2,6 +2,9 @@
 Revision history for Log::Log4perl
 ##################################################
 
+    * (kg) got rid of warnings during make test in 014ConfErrs.t
+           added user-defined hooks to JavaMap
+
 0.34 06/08/2003
     * (ms) James FitzGibbon <james.fitzgibbon@target.com> noticed a major
            bug in Log::Log4perl::Appender::File and provided a patch. Problem
